// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.super-compressed.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.super-compressed.png.gz",
    73160,
    {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.super-compressed.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.super-compressed.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "async.async.js?ver=8c46f9480c54d607e378",
    194,
    {
      "fullhash": "8c46f9480c54d607e378",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.super-compressed.js.gz?ver=8c46f9480c54d607e378",
      },
      "size": 194,
    },
  ],
  [
    "async.async.super-compressed.js.gz?ver=8c46f9480c54d607e378",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "main.js?var=8c46f9480c54d607e378",
    16227,
    {
      "fullhash": "8c46f9480c54d607e378",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.super-compressed.js.gz?var=8c46f9480c54d607e378",
      },
      "size": 16227,
    },
  ],
  [
    "main.super-compressed.js.gz?var=8c46f9480c54d607e378",
    4036,
    {
      "compressed": true,
      "immutable": true,
      "size": 4036,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): errors 1`] = `[]`;

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): warnings 1`] = `[]`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.super-compressed.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.super-compressed.gz",
    73160,
    {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.super-compressed.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.super-compressed.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "assets/js/async.async.js.super-compressed.gz?ver=f065e460b9c6d294d567#hash",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "assets/js/async.async.js?ver=f065e460b9c6d294d567#hash",
    194,
    {
      "fullhash": "f065e460b9c6d294d567",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "assets/js/async.async.js.super-compressed.gz?ver=f065e460b9c6d294d567#hash",
      },
      "size": 194,
    },
  ],
  [
    "assets/js/main.js.super-compressed.gz?var=f065e460b9c6d294d567#hash",
    4055,
    {
      "compressed": true,
      "immutable": true,
      "size": 4055,
    },
  ],
  [
    "assets/js/main.js?var=f065e460b9c6d294d567#hash",
    16253,
    {
      "fullhash": "f065e460b9c6d294d567",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "assets/js/main.js.super-compressed.gz?var=f065e460b9c6d294d567#hash",
      },
      "size": 16253,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): errors 1`] = `[]`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): warnings 1`] = `[]`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "compression-function-5f27f917e58a6cfd45a9fb0dbfb129f9": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    78117,
    {
      "compressed": true,
      "size": 78117,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "compression-function-5f27f917e58a6cfd45a9fb0dbfb129f9": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    672,
    {
      "compressed": true,
      "size": 672,
    },
  ],
  [
    "async.async.js.gz?ver=5857f2789e83e20e1327",
    194,
    {
      "compressed": true,
      "size": 194,
    },
  ],
  [
    "async.async.js?ver=5857f2789e83e20e1327#hash",
    194,
    {
      "fullhash": "5857f2789e83e20e1327",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "compression-function-5f27f917e58a6cfd45a9fb0dbfb129f9": "async.async.js.gz?ver=5857f2789e83e20e1327",
      },
      "size": 194,
    },
  ],
  [
    "main.js.gz?var=5857f2789e83e20e1327",
    16232,
    {
      "compressed": true,
      "size": 16232,
    },
  ],
  [
    "main.js?var=5857f2789e83e20e1327#hash",
    16232,
    {
      "fullhash": "5857f2789e83e20e1327",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "compression-function-5f27f917e58a6cfd45a9fb0dbfb129f9": "main.js.gz?var=5857f2789e83e20e1327",
      },
      "size": 16232,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): errors 1`] = `[]`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): warnings 1`] = `[]`;

exports[`"filename" option matches snapshot for custom function ({Function}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    {
      "compressed": true,
      "size": 73160,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "size": 393,
    },
  ],
  [
    "async.async.js.gz?ver=5857f2789e83e20e1327",
    134,
    {
      "compressed": true,
      "size": 134,
    },
  ],
  [
    "async.async.js?ver=5857f2789e83e20e1327#hash",
    194,
    {
      "fullhash": "5857f2789e83e20e1327",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz?ver=5857f2789e83e20e1327",
      },
      "size": 194,
    },
  ],
  [
    "main.js.gz?var=5857f2789e83e20e1327",
    4040,
    {
      "compressed": true,
      "size": 4040,
    },
  ],
  [
    "main.js?var=5857f2789e83e20e1327#hash",
    16232,
    {
      "fullhash": "5857f2789e83e20e1327",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz?var=5857f2789e83e20e1327",
      },
      "size": 16232,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for custom function ({Function}): errors 1`] = `[]`;

exports[`"filename" option matches snapshot for custom function ({Function}): warnings 1`] = `[]`;

exports[`"filename" option show work: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  [
    "assets/scripts/async.async.js.gz",
    134,
    {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  [
    "assets/scripts/async.async.js?ver=9aef21636d60cee50cc9#hash",
    194,
    {
      "fullhash": "9aef21636d60cee50cc9",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "assets/scripts/async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "assets/scripts/main.js.gz",
    4054,
    {
      "compressed": true,
      "immutable": true,
      "size": 4054,
    },
  ],
  [
    "assets/scripts/main.js?var=9aef21636d60cee50cc9#hash",
    16258,
    {
      "fullhash": "9aef21636d60cee50cc9",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "assets/scripts/main.js.gz",
      },
      "size": 16258,
    },
  ],
]
`;

exports[`"filename" option show work: errors 1`] = `[]`;

exports[`"filename" option show work: warnings 1`] = `[]`;
